--- a/src/pages/de/luke/1.astro
+++ b/src/pages/de/luke/1.astro
@@ -20,7 +20,7 @@ function getVersesForPericope(verseRange: string, sections: any[]) {
   });
 }
 
-const base = '/aperto-bible-website';
+const base = '';
 ---
 
 <BaseLayout title="Lukas 1" lang="de" description="Lukas Kapitel 1 - Eine Reise durch die Perikopen">
